# offer-codes

./: .gitignore  Cargo.toml  Dockerfile  README.md  example.env  index.js  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml  lint-test.yml
.sqlx/: query-8e9cdbeaa31b8ecf738fc07a662890640e3d7147b4786c215ccc26fce19d68e0.json  query-b6ef9f77cb5e45c76beff6ae3b2b30441617636f5782444ce81a651ad73110d7.json
k8s/: values.yaml.j2
migrations/: 0001_init.sql
src/: db.rs  main.rs
