[package]
name = "offercode"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
chia = "0.20.0"
chia-wallet-sdk = { version = "0.22.1", features = ["offers"] }
dotenvy = "0.15.7"
hex = "0.4.3"
rocksdb = "0.23.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
